--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "vue-cli-service serve --open"
   },
   "dependencies": {
     "core-js": "^3.3.2",
+    "mdbvue": "5.8.3",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
@@ -25,7 +27,10 @@
     "babel-eslint": "^10.0.3",
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
+    "eslint-plugin-html": "^5.0.5",
     "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue-libs": "^3.0.0",
+    "vue-cli-plugin-mdb": "^1.9.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
