--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mdbvue": "5.8.3",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-iro-color-picker": "^2.0.0",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
